POLISH: web file

--- a/_posts/gold/2022-03-17-web.md
+++ b/_posts/gold/2022-03-17-web.md
@@ -10,9 +10,9 @@ image: /assets/img/posts/0.jpg
 pin: true
 ---
 
-## 网站
+## Web
 
-### 威盛
+### VIXEN
 
  | A                                  | B                                        |
  |------------------------------------|------------------------------------------|
@@ -21,7 +21,7 @@ pin: true
  | [Blacked](https://www.blacked.com) | [BlackedRaw](https://www.blackedraw.com) |
  | [Slayed](https://www.slayed.com)   | [Milfy](https://www.milfy.com/)          |
 
-### 聚合网址
+### Al-in-one Webs
 
 | Category  | Name                                    |  Taghugo  |
 | :-------: | --------------------------------------- | :-------: |
@@ -37,9 +37,9 @@ pin: true
 
 ---
 
-## 经典收集
+## Classic
 
-### 缚青主
+### Fuqingzhu
 
 | 标题                                                     | 平台    | 日期       | 作者   |
 | -------------------------------------------------------- | ------- | ---------- | ------ |
@@ -69,7 +69,7 @@ pin: true
 | [迷][qiaotunyingqi-k]                                                    | 91Porn | 2018/10/17 | 翘臀淫妻 |
 | [酒店暴艹拍写真的长腿模特女神][qiaotunyingqi-e]                          | 91Porn | 2018/03/08 | 翘臀淫妻 |
 
-### 春满四合院
+### Chunman4
 
 | 标题                                  | 平台       | 日期       | 作者        |
 | ------------------------------------- | ---------- | ---------- | ----------- |
@@ -154,7 +154,7 @@ pin: true
 | [（云南）罪恶的弥散][tuisi-2]                                           | 91Porn | 2022/03/01 | 腿丝           |
 | [（云南）风情万种，凡间尤物][tuisi-3]                                   | 91Porn | 2022/03/08 | 腿丝           |
 
-### darkreaver系列
+### darkreaver
 
 1. [【Dark 妖艳贴】第一贴，今天开始，那个芭蕾美女。[14P+1P验证]](https://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=82111193)
 1. [【Dark 妖艳贴】第二贴，继续吧，这次是打台球的妹妹。[14P] + [2P预告] + [1P验证]](https://www.sexinsex.net/bbs/disbox.php?action=viewpost&pid=82209145)
